--- a/Altkom.Shop.WpfClient/Altkom.Shop.WpfClient.csproj
+++ b/Altkom.Shop.WpfClient/Altkom.Shop.WpfClient.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Altkom.Shop.ViewModels\Altkom.Shop.ViewModels.csproj" />
+  </ItemGroup>
+
 </Project>
