--- a/Altkom.Shop.WpfClient/Altkom.Shop.WpfClient.csproj
+++ b/Altkom.Shop.WpfClient/Altkom.Shop.WpfClient.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.2.0" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.31" />
   </ItemGroup>
 
   <ItemGroup>
